syntax = "proto3";

package fs.safety.blacklist;

import "zskparker.com/foundation/base/pb/base.proto";

service Blacklist {

    rpc CheckMeta (CheckMetaRequest) returns (fs.base.Response);

    rpc CheckAccount (CheckAccountRequest) returns (fs.base.Response);

    rpc Add (AddRequest) returns (fs.base.Response);
}

message CheckAccountRequest {
    string account = 1;
}

message CheckMetaRequest {
    string ip = 1;
    string device = 2;
    string clientId = 3;
}

message AddRequest {
    string userId = 1;
    string ip = 2;
    string device = 3;
    string account = 4;
}